# cargo-metask

./: Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: CI.yml  auto-approve.yml  publish.yml
src/: lib.rs
