[package]
name          = "cargo-metask"
version       = "0.1.0"
edition       = "2024"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/cargo-metask"
homepage      = "https://crates.io/crates/cargo-metask"
repository    = "https://github.com/kana-rus/cargo-metask"
readme        = "README.md"
license       = "MIT"
description   = "A lightweight task runner for tasks defined in Cargo.toml"
keywords = [
    "cargo",
    "subcommand",
    "plugin",
    "task",
    "build",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
    "development-tools::testing",
]

[package.metadata.tasks]
greet = "echo 'Hello, cargo-metask!'"
build3 = "bash -c 'for i in {1..3}; do sleep 1 && cargo build; done'"

[dependencies]
toml = { version = "0.8", features = ["parse"] }
clap = { version = "4.5", features = ["derive"] }
