[package]
name          = "cargo-metask"
version       = "0.2.3"
edition       = "2024"
authors       = ["kanarus <kanarus786@gmail.com>"]
documentation = "https://docs.rs/cargo-metask"
homepage      = "https://crates.io/crates/cargo-metask"
repository    = "https://github.com/kanarus/cargo-metask"
readme        = "README.md"
license       = "MIT"
description   = "Cargo task runner for package.metadata.tasks"
keywords = [
    "cargo",
    "subcommand",
    "plugin",
    "task",
    "build",
]
categories = [
    "command-line-utilities",
    "development-tools",
    "development-tools::cargo-plugins",
    "development-tools::build-utils",
    "development-tools::testing",
]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
toml = { version = "0.8", features = ["parse"] }
clap = { version = "4.5", features = ["derive"] }

[package.metadata.tasks]
greet = "echo 'Hello, cargo-metask!'"
build3 = "bash -c 'for i in {1..3}; do sleep 1 && cargo build; done'"
greet2 = "sleep 2 && echo 'Hello, cargo-metask! with sleep 2'"
